OPA Policies/Retain Policy- Denied/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockRetain
metadata:
  name: block-RetainPolicy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["StorageClass"]
